CI/CD Job error Fixed